@startuml
skinparam classAttributeIconSize 0

class Application {
  +static getInstance()
  +getCompany()


}

class VaccinatedToFile {
-HEADER
-List listFullyVaccinated
-List listVaccinated

+validateFileName(String fileName)
+getFullyVaccinatedPatients()
+getListVaccinated()
+writeToFile(String fileName)
}


class Company {
+getVaccinatedToFile()
+getUsersVaccineSchedule()

}



class VaccinationCenter{
getListAdministratedVaccines()
}


class VaccinatedToFileController {
-App oApp;
-Company oCompany

+getListAdministratedVaccines()
+validateFileName(String fileName)
+writeToFile(String fileName)
}

class VaccinatedToFileUI {

}


VaccinatedToFileUI ..> VaccinatedToFileController
VaccinatedToFileController ..> Company
VaccinatedToFileController ..> Application
Application ..> Company
Company "1"-->"*"VaccinationCenter :knows
VaccinatedToFileController ..> VaccinatedToFile
VaccinationCenter "1" --> "*" VaccinatedToFile : produces




@enduml